--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "groq-sdk": "^0.9.1",
+    "next": "14.2.21",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.21"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.21"
+    "eslint-config-next": "14.2.21",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
